# GRAT_CRAT_AI_Pipeline

./: .gitignore  DEEP_DIVE_ANALYSIS.md  GRAT_vs_CRAT_Results.md  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  assumptions.txt  pyrightconfig.json
src/drafting/: README.md  fix_draft.py  pyproject.toml  run.py
src/drafting/context/: __init__.py  client_context.py  numeric_binder.py  section_context.py
src/drafting/data/: ClientProfile.json  ModelOutputs.json  Outline.json  RetrievalBundle.json
src/drafting/drafting/: __init__.py  pipeline.py  section_drafter.py
src/drafting/llm/: __init__.py  client.py
src/drafting/loaders/: __init__.py  client_profile.py  json_utils.py  model_outputs.py  outline.py  retrieval_bundle.py
src/drafting/output/: Draft.md  DraftManifest.json  __init__.py  assembler.py  manifest.py  pdf.py  references.py  writer.py
src/drafting/pipeline/: __init__.py  orchestrate.py
src/drafting/postprocessing/: __init__.py  citation_inserter.py  numeric_substituter.py  validator.py
src/drafting/prompts/: __init__.py  citation_instructions.py  section_prompt.py  system_prompt.py
src/drafting/tests/: test_assembler.py  test_citation_inserter.py  test_citation_instructions.py  test_client_context.py  test_client_profile_loader.py  test_draft_all_sections.py  test_llm_client.py  test_manifest.py  test_model_outputs_loader.py  test_numeric_binder.py  test_numeric_substituter.py  test_orchestrate.py  test_outline_loader.py  test_pdf.py  test_references.py  test_retrieval_bundle_loader.py  test_section_context.py  test_section_drafter.py  (+5 more)
(+100 files in other folders)
